--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "officialeye"
-version = "1.1.2"
+version = "1.1.3"
 description = "AI-powered generic document-analysis tool"
 authors = [
     {name = "Alexander Mayorov", email = "zb@zerobone.net"},
@@ -27,7 +27,7 @@ classifiers = [
 ]
 
 [project.scripts]
-officialeye = "officialeye.officialeye:cli"
+officialeye = "officialeye:cli"
 
 [project.urls]
 Homepage = "https://github.com/ZeroBone/OfficialEye"
