--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,7 +58,7 @@ plugins:
       enabled: !ENV [CI, false]
   - gen-files:
       scripts:
-        - docs_dynamic/gen_ref_pages.py
+        - docs_dynamic/gen_api.py
   - literate-nav:
       nav_file: summary.md
   - mkdocstrings:
@@ -121,7 +121,8 @@ nav:
           - License: usage/other/license.md
   - Development:
       - dev/changelog.md
-  - "API Reference": reference/
+      - "Internal API": dev/api/
+  - "API Reference": api/
 
 extra_css:
   - assets/stylesheets/style.css
