--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,5 +17,7 @@ jobs:
         uses: pdm-project/setup-pdm@v3
       - name: Install dependencies
         run: pdm install
+      - name: Install ruff
+        run: pip install ruff
       - name: Run ruff linter
         run: pdm run ci-ruff
