--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pyyaml",
     "strictyaml==1.7.3",
     "z3-solver",
+    "rich"
 ]
 requires-python = ">=3.10"
 readme = "README.md"
@@ -27,7 +28,7 @@ classifiers = [
 ]
 
 [project.scripts]
-officialeye = "officialeye._internal.main:cli"
+officialeye = "officialeye._internal.cli.main:main"
 
 [project.urls]
 Homepage = "https://github.com/ZeroBone/OfficialEye"
