Fixed a race condition caused by future callbacks being called asynchronously rather than synchronously, other improvements.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ docs-build = "mkdocs build"
 docs-deploy = "mkdocs gh-deploy --force"
 
 # other scripts
-count-loc = {shell = "find src/officialeye -name '*.py' | xargs wc -l"}
+count-loc = {shell = "find src -name '*.py' | xargs wc -l"}
 
 # scripts to be called by the CI (i.e., GitHub actions)
 ci-pytest = {shell = "pytest src/tests/"}
