--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Install dependencies
         run: pdm install
       - name: Install tesseract
-        run:
-          - sudo apt update
-          - sudo apt install -y tesseract-ocr
-          - sudo apt install -y tesseract-ocr-rus
+        run: |
+          sudo apt update
+          sudo apt install -y tesseract-ocr
+          sudo apt install -y tesseract-ocr-rus
       - name: Run pytest
         run: pdm run ci-pytest
