First experiment setup: raw ransac implemented

--- a/docs/assets/templates/driver_license_ru_01/driver_license_ru.yml
+++ b/docs/assets/templates/driver_license_ru_01/driver_license_ru.yml
@@ -59,7 +59,7 @@ matching:
     sift_flann:
       sensitivity: 0.7
 supervision:
-  engine: combinatorial
+  engine: ransac
   config:
     combinatorial:
       min_match_factor: 0.1
