--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pyyaml",
     "strictyaml==1.7.3",
     "z3-solver",
-    "rich"
+    "rich",
+    "pyscipopt>=4.4.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
