--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "z3-solver",
     "rich",
     "pyscipopt>=4.4.0",
+    "scipy>=1.12.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
